# MMY-RuleBridge

./: .gitignore  README.md  build.ps1  build.py  build_mac.sh  pyproject.toml  rulebridge.spec  多Agent规则桥接工具开发方案.md
src/: rulebridge_launcher.py
src/rulebridge/: __init__.py  __main__.py  api.py  cli.py  doctor.py  generator.py  initializer.py  models.py  pack.py  render.py  service.py  source.py  validator.py  web.py  writer.py
src/rulebridge/adapters/: __init__.py  base.py  claude.py  codebuddy.py  codex.py  cursor.py  generic.py  git.py  mcp.py  trae.py  workbuddy.py  zcode.py
src/rulebridge/web_assets/: __init__.py  app.js  index.html  rulebridge.icns  style.css
tests/: test_rulebridge.py
