[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mmy-rulebridge"
version = "0.1.0"
description = "Bridge one AI agent rule source into multiple agent configuration formats."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "EDY" }]
dependencies = [
  "pydantic>=2.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]
build = ["pyinstaller>=6.0"]

[project.scripts]
rulebridge = "rulebridge.cli:app"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/rulebridge"]

[tool.hatch.build.targets.wheel.force-include]
"src/rulebridge/web_assets" = "rulebridge/web_assets"
